// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cover Persist Proeprty Test: automatic persistence worked 1`] = `
Object {
  "store.detailList": "{\\"myBool\\":false,\\"myString\\":\\"i was autosaved\\"}",
}
`;

exports[`Cover Persist Proeprty Test: boolean can become true 1`] = `
Object {
  "store.detailList": "{\\"myBool\\":true,\\"myString\\":\\"autochangesaved again\\"}",
}
`;

exports[`Cover Persist Proeprty Test: disabling automatic saving results in no changes made 1`] = `
Object {
  "store.detailList": "{\\"myBool\\":false,\\"myString\\":\\"i was autosaved\\"}",
}
`;

exports[`Cover Persist Proeprty Test: empty before any actions 1`] = `Object {}`;

exports[`Cover Persist Proeprty Test: nothing automatically persisted 1`] = `Object {}`;

exports[`Cover Persist Proeprty Test: resubbing autosaves again 1`] = `
Object {
  "store.detailList": "{\\"myBool\\":false,\\"myString\\":\\"autochangesaved again\\"}",
}
`;
